# seqOutBias

./: Cargo.toml  Cargo.toml.orig  LICENSE.md  build.rs  notas.txt  run.bat  run.sh
docs/: index.md
docs/R/: seqOutBias_evalmask.R  seqOutBias_functions.R  seqOutBias_hcsearch.R
docs/_layouts/: default.html
profile/: Cargo.toml  profile.rs
src/: bigwig.rs  c_api.rs  counts.rs  fasta.rs  filter.rs  lib.rs  main.rs  outputfile.rs  randfile.rs  scale.rs  tallyread.rs  tallyrun.rs  temp.rs
src/fasta/context/: masked.rs  masked_stranded.rs  mod.rs  simple.rs
src/seqtable/: dump.rs  mod.rs  read.rs  write.rs
tests/: fasta.rs  output.rs
tests/resources/: aln-se2.sam  reads.bam  ref2.fa.amb  ref2.fa.ann  ref2.fa.sa  ref2.sft.des  ref2.sft.prj
tests/resources/base/: reads.fa  ref2.fa  ref2.fa.bwt  ref2.fa.pac  ref2.sft.esq  ref2.sft.lcp  ref2.sft.md5  ref2.sft.suf
