[package]
name = "seqOutBias"
version = "1.1.3"
authors = ["André Martins <alm253@cornell.edu>"]
build = "build.rs"

[lib]
name = "seqoutbiaslib"
path = "src/lib.rs"
crate-type = ["rlib","cdylib"]

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
rust-htslib = "0.12"
flate2 = "0.2"
byteorder = "0.5"
bincode = "0.5"
tempfile = "2.1"
libc = "0.2"
rand = "0.4"

[dev-dependencies]
assert_cmd = "0.4"
predicates = "0.5"
tempdir = "0.3"
fs_extra = "1.1"

[features]
default = []

# this feature enables the generation of the C header file for the C API
# you may need to downgrade the compiler version to version 1.18.
headers = ["rusty-cheddar"]

[build-dependencies]
rusty-cheddar = { version = "0.3", optional = true }
rustc_version = "0.1"
