[package]
name = "seqOutBias"
version = "1.3.0"
authors = ["André Martins <alm253@cornell.edu>"]
build = "build.rs"

[lib]
name = "seqoutbiaslib"
path = "src/lib.rs"
crate-type = ["rlib","cdylib"]

[workspace]

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
rust-htslib = "0.12"
flate2 = "0.2"
byteorder = "0.5"
bincode = "0.5"
tempfile = "2.1"
libc = "0.2"
rand = "0.4"
toml = "0.5"
profile = { path = "profile" }

[dev-dependencies]
assert_cmd = "0.4"
predicates = "0.5"
tempdir = "0.3"
fs_extra = "1.1"

[features]
default = []

# this feature enables the generation of the C header file for the C API
headers = ["cbindgen"]

[build-dependencies]
cbindgen = { version = "0.13", optional = true }
rustc_version = "0.1"
